--- a/DemoMaster/public_html/WEB-INF/web.xml
+++ b/DemoMaster/public_html/WEB-INF/web.xml
@@ -65,6 +65,12 @@ Copyright (c) 2016, 2013, Oracle and/or its affiliates. All rights reserved.
   <listener>
     <listener-class>oracle.adf.mbean.share.config.ADFConfigLifeCycleCallBack</listener-class>
   </listener>
+  <listener>
+    <listener-class>oracle.adf.mbean.share.connection.ADFConnectionLifeCycleCallBack</listener-class>
+  </listener>
+  <listener>
+    <listener-class>oracle.bc4j.mbean.BC4JConfigLifeCycleCallBack</listener-class>
+  </listener>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
