--- a/UIKitCommon/src/oracle/apps/uikit/common/UIKitCommonBundle.properties
+++ b/UIKitCommon/src/oracle/apps/uikit/common/UIKitCommonBundle.properties
@@ -11,11 +11,11 @@ SHOW_HELP=Show Help
 LISA_JONES=Lisa Jones
 SETTINGS_AND_ACTIONS=Settings and Actions
 LOGOUT=Logout
-PERSONALIZATION=Personalization
+PERSONALIZATION=Profil
 ADMINISTRATION=Administration
-HELP_DIAGNOSTICS__SUPPORTABILI=Help Diagnostics & Supportability
-ABOUT_PAGE=About Page
-SET_PREFERENCES=Set Preferences
+HELP_DIAGNOSTICS__SUPPORTABILI=Hilfe
+ABOUT_PAGE=Über HF-TopTen
+SET_PREFERENCES=Einstellungen
 EDIT_CURRENT_PAGE=Edit Current Page
 RESET_PAGE_CONTENT=Reset Page Content
 ADMIN_PERSONALIZATION=Admin Personalization
@@ -23,7 +23,7 @@ ADMIN_CUSTOMIZATION=Admin Customization
 CUSTOMIZATION_MANAGER=Customization Manager
 MANAGE_SANDBOXES=Manage Sandboxes
 SETUP_AND_MAINTENANCE=Setup and Maintenance
-APPLICATIONS_HELP=Applications Help
+APPLICATIONS_HELP=Hifle für HF-TopTen
 DIAGNOSTICS_RUN=Diagnostics Run
 SUPPORTABILITY_CHECK=Supportability Check
 TROUBLESHOOTING_OPTIONS=Troubleshooting Options
