changed title of login page and added text to resource bundle

--- a/DemoMaster/src/oracle/apps/uikit/DemoMasterBundle.properties
+++ b/DemoMaster/src/oracle/apps/uikit/DemoMasterBundle.properties
@@ -39,3 +39,5 @@ WELCOME_TO_THE_RDK=Welcome to the RDK
 THIS_FEATURE_IS_NOT_AVAILABLE_=This feature is not available in this version of the Rapid Development Kit
 SELECT_A_SPRINGBOARD_ICON_STYL=Select a springboard icon style for your session.
 WELCOME_TO_THE_ORACLE_APPLICAT=Welcome to the Oracle Applications Cloud UX RDK
+ANMELDUNG=Anmeldung
+ANMELDETEXT=Bitte melden Sie sich an
