changed input form; added German label names to HfCat EC/VO

--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -1,1 +1,10 @@
-de.adfprojectsesions.hf.model.adfbc.views.HfCatView.CatName_LABEL=Beschreibung
+KATEGORIE=Kategorie
+BESCHREIBUNG=Beschreibung
+KATEGORIE_BESCHREIBUNG=Beschreibung der Kategorie
+AENDERUNGSNUMMER=\u00C4nderungsnummer
+DATUM_LETZTER_AENDERUNG=Datum letzter \u00C4nderung
+de.adfprojectsesions.hf.model.adfbc.entities.HfCat.LastChange_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
+de.adfprojectsesions.hf.model.adfbc.entities.HfCat.LastChange_FMT_FORMAT=dd-MMM-yyyy
+KATEGORIE_NR=Kategorie Nr.
+BENUTZER=Benutzer
+UEBERGEORDNETE_KATEGORIE=\u00DCbergeordnete Kategorie
