--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -8,3 +8,4 @@ de.adfprojectsesions.hf.model.adfbc.entities.HfCat.LastChange_FMT_FORMAT=dd-MMM-
 KATEGORIE_NR=Kategorie Nr.
 BENUTZER=Benutzer
 UEBERGEORDNETE_KATEGORIE=\u00DCbergeordnete Kategorie
+de.adfprojectsesions.hf.model.adfbc.views.HfCatByUserView_LABEL=Hf Cat By User View Obj
