added ant as build for all projects

--- a/DemoFIN/DemoFIN_build.properties
+++ b/DemoFIN/DemoFIN_build.properties
@@ -1,4 +1,4 @@
-#Mon Feb 15 22:18:40 CET 2016
+#Tue Feb 16 16:07:47 CET 2016
 #oracle.commons=R\:\\Java\\12.1.3.0.0\\Oracle\\Middleware\\oracle_common
 #install.dir=R\:\\Java\\12.1.3.0.0\\Oracle\\Middleware
 #oracle.jdeveloper.ant.library=R\:\\Java\\12.1.3.0.0\\Oracle\\Middleware\\jdeveloper\\jdev\\/lib/ant-jdeveloper.jar
@@ -8,18 +8,18 @@
 #oracle.jdeveloper.workspace.path=Q\:\\JavaDevCloud\\DOAGDEVCAMP2016\\AppsCloudUIKit\\AppsCloudUIKit.jws
 #javac.debug=on
 #oracle.jdeveloper.deploy.profile.name=*
-#oracle.jdeveloper.deploy.dir=Q\:\\JavaDevCloud\\DOAGDEVCAMP2016\\AppsCloudUIKit\\UIKitCommon\\deploy
+#oracle.jdeveloper.deploy.dir=Q\:\\JavaDevCloud\\DOAGDEVCAMP2016\\AppsCloudUIKit\\DemoFIN\\deploy
 #oracle.jdeveloper.ojdeploy.path=R\:\\Java\\12.1.3.0.0\\Oracle\\Middleware\\jdeveloper\\jdev\\bin\\ojdeploy.exe
 #javac.nowarn=off
-#oracle.jdeveloper.project.name=UIKitCommon
-#oracle.jdeveloper.deploy.outputfile=Q\:\\JavaDevCloud\\DOAGDEVCAMP2016\\AppsCloudUIKit\\UIKitCommon\\deploy\\${profile.name}
+#oracle.jdeveloper.project.name=DemoFIN
+#oracle.jdeveloper.deploy.outputfile=Q\:\\JavaDevCloud\\DOAGDEVCAMP2016\\AppsCloudUIKit\\DemoFIN\\deploy\\${profile.name}
 
 
 #Change the next three properties to match your projects names
 workspace.name=AppsCloudUIKit
-project.viewcontroller.name=UIKitCommon
+project.viewcontroller.name=DemoFIN
 project.deploy.folder=libs
-oracle.jdeveloper.deploy.profile.name=adflibUIKitCommon
+oracle.jdeveloper.deploy.profile.name=adflibDemoFIN
 output.dir=classes
 
 # Don't change anything below!
