--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -24,3 +24,4 @@ de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView.LastChange_FMT_FORMATTE
 de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView.LastChange_FMT_FORMAT=dd-MMM-yyyy
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_LABEL=Playlisten Nr.
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_TOOLTIP=Playlisten Nr.
+de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistCardView_LABEL=Hf Playlist Card View
