fixed some small errors: creating a new playlist now allows only to select the current users kategories; ShareFlag now displays correct in createEditPlaylist page

--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -20,9 +20,9 @@ de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntSeq_LABEL=\u00C4nderu
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntSeq_TOOLTIP=\u00C4nderungsnummer
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_LABEL=Datum letzter \u00C4nderung
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.ShareFlag_LABEL=Sichtbar f\u00FCr Andere
-de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView.LastChange_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
-de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView.LastChange_FMT_FORMAT=dd-MMM-yyyy
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_LABEL=Playlisten Nr.
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_TOOLTIP=Playlisten Nr.
 de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistCardView_LABEL=Hf Playlist Card View
 de.adfprojectsesions.hf.model.adfbc.views.HfSharedPlaylistView_LABEL=Hf Shared Playlist View
+de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
+de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_FMT_FORMAT=dd-MMM-yyyy HH\:mm\:ss
