modified SharePlaylist to show the right share flag.

--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -2,7 +2,7 @@ KATEGORIE=Kategorie
 BESCHREIBUNG=Beschreibung
 KATEGORIE_BESCHREIBUNG=Beschreibung der Kategorie
 AENDERUNGSNUMMER=\u00C4nderungsnummer
-DATUM_LETZTER_AENDERUNG=Datum letzter \u00C4nderung
+DATUM_LETZTER_AENDERUNG=Letzte \u00C4nderung
 de.adfprojectsesions.hf.model.adfbc.entities.HfCat.LastChange_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
 de.adfprojectsesions.hf.model.adfbc.entities.HfCat.LastChange_FMT_FORMAT=dd-MMM-yyyy
 KATEGORIE_NR=Kategorie Nr.
@@ -18,7 +18,7 @@ de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.Description_LABEL=Beschr
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.Description_TOOLTIP=Beschreibung der Playliste
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntSeq_LABEL=\u00C4nderungsnummer
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntSeq_TOOLTIP=\u00C4nderungsnummer
-de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_LABEL=Datum letzter \u00C4nderung
+de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_LABEL=Letzte \u00C4nderung
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.ShareFlag_LABEL=Sichtbar f\u00FCr Andere
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_LABEL=Playlisten Nr.
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_TOOLTIP=Playlisten Nr.
