added registration page

--- a/DemoMaster/src/oracle/apps/uikit/DemoMasterBundle.properties
+++ b/DemoMaster/src/oracle/apps/uikit/DemoMasterBundle.properties
@@ -41,3 +41,9 @@ SELECT_A_SPRINGBOARD_ICON_STYL=Select a springboard icon style for your session.
 WELCOME_TO_THE_ORACLE_APPLICAT=Welcome to the Oracle Applications Cloud UX RDK
 ANMELDUNG=Anmeldung
 ANMELDETEXT=Bitte melden Sie sich an
+REGISTER=Registrierung
+REGISTER_TEXT=Bitte registrieren Sie sich
+CANCEL=Abbrechen
+SAVE=Speichern
+PASSWORD_CONFIRM=Passwort Wiederholung
+PASSWORD_NOT_MATCHING=Die Passw\u00F6rter stimmen nicht \u00FCberein
