--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -26,3 +26,6 @@ de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistCardView_LABEL=Hf Playlist C
 de.adfprojectsesions.hf.model.adfbc.views.HfSharedPlaylistView_LABEL=Hf Shared Playlist View
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_FMT_FORMATTER=oracle.jbo.format.DefaultDateFormatter
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_FMT_FORMAT=dd-MMM-yyyy HH\:mm\:ss
+PASSWORD=Passwort
+LOGIN_NAME=Anmelde Name
+DISPLAY_NAME=Anzeige Name
