--- a/HFStammdaten/src/de/adfprojectsessions/hf/stammdaten/HFStammdatenBundle.properties
+++ b/HFStammdaten/src/de/adfprojectsessions/hf/stammdaten/HFStammdatenBundle.properties
@@ -4,3 +4,6 @@ KATEGORIEN=Kategorien
 CREATE_KATEGORIE=Neue Kategorie
 FIND=Suche
 NO_KATEGORIES_FOUND=Keine Kategorien gefunden
+EDIT_ANWENDER=Edit Anwender
+SHOW_ANWENDER=Anwender Anzeigen
+EDIT=EDIT
