added Spotify search by title as first stage

--- a/HFPlaylisten/src/de/adfprojectsessions/hf/playlisten/HFPlaylistenBundle.properties
+++ b/HFPlaylisten/src/de/adfprojectsessions/hf/playlisten/HFPlaylistenBundle.properties
@@ -4,3 +4,6 @@ SHAREDPLAYLISTEN=Geteilte Playlisten
 FIND=Suche
 NO_PLAYLISTS_FOUND=Keine Playlisten gefunden
 CREATE_PLAYLIST=Neue Playliste
+ADD_TRACKS=Titel hinzuf\u00FCgen
+SHOW_TITEL=Titel anzeigen
+BACK=Zur\u00FCck
