added Spotify REST search for titles and display of them in a listview

--- a/HFPlaylisten/src/de/adfprojectsessions/hf/playlisten/HFPlaylistenBundle.properties
+++ b/HFPlaylisten/src/de/adfprojectsessions/hf/playlisten/HFPlaylistenBundle.properties
@@ -1,9 +1,8 @@
 ##
 PLAYLISTEN=Playlisten
-SHAREDPLAYLISTEN=Geteilte Playlisten
-FIND=Suche
-NO_PLAYLISTS_FOUND=Keine Playlisten gefunden
+ADD_TITLE=Titel hinzufügen
 CREATE_PLAYLIST=Neue Playliste
 ADD_TRACKS=Titel hinzuf\u00FCgen
 SHOW_TITEL=Titel anzeigen
 BACK=Zur\u00FCck
+ADD_MARKED_TRACKS=Markierte Titel hinzuf\u00FCgen
