changed playlistebearbeiten-btf to allow back navigation

--- a/HFPlaylisten/src/de/adfprojectsessions/hf/playlisten/HFPlaylistenBundle.properties
+++ b/HFPlaylisten/src/de/adfprojectsessions/hf/playlisten/HFPlaylistenBundle.properties
@@ -6,3 +6,5 @@ ADD_TRACKS=Titel hinzuf\u00FCgen
 SHOW_TITEL=Titel anzeigen
 BACK=Zur\u00FCck
 ADD_MARKED_TRACKS=Markierte Titel hinzuf\u00FCgen
+SEARCH_FOR=Suche nach\:
+SEARCH=Suchen
