added getting image url from REST call for titles; added ANT build script for HFSpotifyRestModel; changed card view of titles to shoe image of album

--- a/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
+++ b/HFModel/src/de/adfprojectsesions/hf/model/HFModelBundle.properties
@@ -18,7 +18,7 @@ de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.Description_LABEL=Beschr
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.Description_TOOLTIP=Beschreibung der Playliste
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntSeq_LABEL=\u00C4nderungsnummer
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntSeq_TOOLTIP=\u00C4nderungsnummer
-de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_LABEL=Letzte \u00C4nderung
+de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_LABEL=\u00C4nderung
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.ShareFlag_LABEL=Sichtbar f\u00FCr Andere
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_LABEL=Playlisten Nr.
 de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.IntKey_TOOLTIP=Playlisten Nr.
@@ -29,3 +29,4 @@ de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist.LastChange_FMT_FORMAT=dd
 PASSWORD=Passwort
 LOGIN_NAME=Anmelde Name
 DISPLAY_NAME=Anzeige Name
+ARTIST=Interpret
