changes application name to HFTopTen

--- a/Appbuild.properties
+++ b/Appbuild.properties
@@ -13,7 +13,7 @@
 workspace.name=AppsCloudUIKit
 project.viewcontroller.name=DemoMster
 project.deploy.folder=deploy
-oracle.jdeveloper.deploy.profile.name=AppsCloudUIKit
+oracle.jdeveloper.deploy.profile.name=HFTopTen
 output.dir=classes
 
 # Don't change anything below!
