--- a/DemoMaster/DemoMaster_build.properties
+++ b/DemoMaster/DemoMaster_build.properties
@@ -19,7 +19,7 @@
 workspace.name=AppsCloudUIKit
 project.viewcontroller.name=DemoMaster
 project.deploy.folder=libs
-oracle.jdeveloper.deploy.profile.name=AppsCloudUIKit
+oracle.jdeveloper.deploy.profile.name=HFTopTen
 output.dir=classes
 
 # Don't change anything below!
